# zenoh_dart

./: .gitattributes  .gitignore  .gitmodules  .tdd-progress.md  CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml
docs/: flutter-project-ideas.md  synthesis-phases-vs-patterns.md
docs/c-shim/: CA-C_shim_proof.md  CC-C_shim_audit.md  C_shim_audit.md
docs/design/: android-native-lib-support.md
docs/phases/: phase-00-bootstrap.md  phase-01-put-delete.md  phase-02-sub.md  phase-03-pub.md  phase-04-shm-pub-sub.md  phase-05-scout-info.md  phase-06-get-queryable.md  phase-07-shm-get-queryable.md  phase-08-channels.md  phase-09-pull.md  phase-10-querier.md  phase-11-liveliness.md  phase-12-ping-pong.md  phase-13-shm-ping.md  phase-14-throughput.md  phase-15-shm-throughput.md  phase-16-bytes.md  phase-17-storage.md  phase-18-advanced.md  phase-P1-packaging.md
docs/prompts/: cf-flutter-examples.md  cg-flutter-projects.md
docs/tdd-prompts/: ca-plan-advisor.md  cb-cz-packaging-prompt.md  cb-packaging-advisor.md
experiments/hooks-bundling/: README.md  context.md  design.md  prior-analysis.md  (+7 more)
package/: CHANGELOG.md  README.md
planning/: 20260304_0000_phase1_put_delete.md  20260305_0000_phase2_callback_subscriber.md  20260306_0000_phase3_declared_publisher.md  20260306_1815_phase5_scout_info.md  20260310_0940_experiment_a1_prebuilt_dlopen.md  20260310_1036_experiment_a2_prebuilt_native.md  20260310_1223_experiment_b1_cbuilder_dlopen.md  20260310_1320_experiment_b2_cbuilder_native.md
scripts/: build_zenoh_android.sh
src/: CMakeLists.txt  zenoh_dart.c  zenoh_dart.h
(+10 files in other folders)
